[package]
name = "rpc-proxy"
version = "1.1.0"
edition = "2021"
authors = ["Aurimas N <aurimas.n@dexterlab.com>"]
description = "A proxy service for Solana JSON-RPC HTTP requests."

[dependencies]
axum = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "=4.1.14", features = ["derive"] }
prometheus = "0.13.4"
serde_json = "1.0"
lazy_static = "1.4"
futures = "0.3"
thiserror = "1.0"

[dev-dependencies]
mockito = "0.31"

[[bin]]
name = "rpc-proxy"
path = "src/main.rs"